[package]
name = "signer"
version = "0.1.0"
authors = ["Abmatrix <http://www.abmatrix.org>"]
edition = "2018"

[dependencies]
libsecp256k1 = { version = "0.3.5", features = ["hmac"] }
tiny-keccak= "1.5.0"
lazy_static = "1.1"
rlp = "0.4.0"
rustc-hex = "1.0"
protobuf = { version = "2.0.4", features = ["with-bytes"] }
web3 = { git = "https://github.com/ABMatrix/rust-web3.git", branch = "bool" }

[dev-dependencies]
tokio-core = "0.1"
# uuid = { version = "0.6", features = ["serde", "v4"] }
# serde_json = "1.0"